# ONE

./: binary_converter.py  compare_float_binaries.py  configure_micro.sh
.ahub/sam/: exclude.txt
.ahub/tcchecker-tca/: config.yaml
circle/: ATan2Options.py  AbsOptions.py  AddNOptions.py  AddOptions.py  ArgMaxOptions.py  ArgMinOptions.py  AssignVariableOptions.py  BCQFullyConnectedOptions.py  BCQGatherOptions.py  BatchMatMulOptions.py  BatchToSpaceNDOptions.py  BidirectionalSequenceLSTMOptions.py  BidirectionalSequenceRNNOptions.py  BitcastOptions.py  BitwiseXorOptions.py  BroadcastToOptions.py  BucketizeOptions.py  Buffer.py  BuiltinOptions.py  BuiltinOptions2.py  CallOnceOptions.py  CallOptions.py  CastOptions.py  ConcatEmbeddingsOptions.py  ConcatenationOptions.py  Conv2DOptions.py  Conv3DOptions.py  CosOptions.py  CumsumOptions.py  CustomQuantization.py  DensifyOptions.py  DepthToSpaceOptions.py  DepthwiseConv2DOptions.py  DequantizeOptions.py  DilateOptions.py  DimensionMetadata.py  DivOptions.py  DynamicUpdateSliceOptions.py  EmbeddingLookupSparseOptions.py  EqualOptions.py  (+131 more)
compiler/circle2circle-dredd-recipe-test/: test.lst
compiler/dredd-rule-lib/: rule-lib.sh
compiler/luci-pass-value-py-test/: test.lst
nnpackage/schema/: circle_schema.fbs
onert-micro/: CMakeLists.txt
onert-micro/eval-driver/: CMakeLists.txt  TrainingDriver.cpp
onert-micro/onert-micro/src/api/: CMakeLists.txt  onert-micro.cpp
tools/circle_tools/: beautiful_logger.py  convert_to_f32.py  extract_offset.py  extract_weight_from_tvn.py  verify_trix_quantization.py
(+351 files in other folders)
